src/test/deca/library/valid/result/test_difference_output.res
Test Soustraction de tableaux 1D
--------------
Tableau1D = [
5 ,5 ,5 ,5 ,5 ,5 ,5 ,]--------------
--------------
Tableau1D = [
6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,]--------------
Le résultat de la soustraction est: 
--------------
Tableau1D = [
-1 ,-1 ,-1 ,-1 ,-1 ,-1 ,-1 ,]--------------

Test soustraction tableau 2D
Soustraction entre un tableau de int rempli de 5 et un tableau de float rempli de 6.0
Le résultat de la soustraction est: 
--------------
Tableau2D = [
-1 ,-1 ,-1 ,
-1 ,-1 ,-1 ,
-1 ,-1 ,-1 ,
]--------------

Soustraction entre un tableau de float rempli de 6.8 et un tableau de int rempli de 5 
--------------
Tableau2D = [
1.80000e+00 ,1.80000e+00 ,1.80000e+00 ,
1.80000e+00 ,1.80000e+00 ,1.80000e+00 ,
1.80000e+00 ,1.80000e+00 ,1.80000e+00 ,
]--------------

Soustraction entre un tableau de float rempli de 6.0 et un tableau de float rempli de 10.5
Le résultat de la soustraction est: 
--------------
Tableau2D = [
-4.50000e+00 ,-4.50000e+00 ,-4.50000e+00 ,
-4.50000e+00 ,-4.50000e+00 ,-4.50000e+00 ,
-4.50000e+00 ,-4.50000e+00 ,-4.50000e+00 ,
]--------------

Soustraction entre un tableau de int rempli de 5 et un tableau de int rempli de 2
Le résultat de la soustraction est: 
--------------
Tableau2D = [
3 ,3 ,3 ,
3 ,3 ,3 ,
3 ,3 ,3 ,
]--------------

