src/test/deca/library/invalid/result/somme_tableau_taille_different_output.res
Test somme de tableaux 1D
--------------
Tableau1D = [
5 ,5 ,5 ,5 ,5 ,5 ,5 ,]--------------
--------------
Tableau1D = [
6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,6.00000e+00 ,]--------------
Les deux matrices doivent être de la même taille pour la somme de matrices
Erreur de dimension
